[package]
name = "cyclops"
version = "0.1.0"
authors = ["Dan Bruder <danb@structionsite.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.0"
tokio = {version = "1.1.1", features = ["full"]}
warp-reverse-proxy = "0.3.0"
shiplift = { git = "https://github.com/softprops/shiplift.git", branch = "master" }

